 * added new epscript function: length() to return the length of
    a list.
 * Modified default citation to make ed/eds show when eds list is 
    plural/single.

2006-09-11 cjg
 * Restored hide help/show help buttons in surround/default
 * Added a [-] button to collapsed fields which have been un-collapsed.

2006-09-12 cjg
 * HTML-Escaped the error message in abort()

2006-09-12 cjg
 * Fixed Issue in Language with spanning pins being passed as a fragment
    containing just that one element. Internal nodes were added to the
    fragment not inside the element.

2006-09-12 cjg
 * Removed the <phrase> config element from Component/Field/Multi as
    this is now handled at the collapse level.

2006-09-12 cjg
 * Bug in validate which was using "public" where it should have been 
    testing for is_set().

2006-09-12 cjg
 * Added <phrase> to collapse which inserts a phrase in the current 
    language.

2006-09-12 cjg
 * Fixed warning if the first value passed to one_of in Script was undef.
   
2006-09-12 cjg
 * Moved citations into general config dir from the lang specific config
    dir. 
 * Removed test code from eprint/default citation.

2006-09-12 cjg
 * Moved $user->can_edit is_editor and is_creator to be instead,
    $dataobj->has_owner( $user ) and ->has_editor( $user) 

2006-09-12 cjg
 * Renamed $doc->public to $dsoc->is_public for clarity

2006-09-12 cjg
 * Renamed Interface/Processor to ScreenProcessor

2006-09-12 cjg
 * First part of splitting up Config.pm etc.

2006-09-13 cjg
 * Broke up .pm files into cfg.d/*.pl
 * Added $session to one of the indexing.pl methods
 * Fixed bug in has_owner permission checks
 * Renamed config {archivefields} to {fields}

2006-09-13 cjg
 * Removed @foo@ from citations

2006-09-14 cjg
 * Removed links to old prototype.js in template

2006-09-14 cjg
 * Moved defaultcfg to lib

2006-09-15 cjg
 * Cleaned up the neat citation (not completely)

2006-09-15 cjg
 * Made line breaks in abort show as <br> in HTML report.